--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,15 @@
-
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <h1>Editing Book</h1>
 
-<%= form_with model: @book, url: update_book_path(@book.id), method: :path do |f| %>
+<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 
@@ -14,5 +21,4 @@
 <% end %>
 
 <%= link_to "Show", book_path(@book.id) %>
-<P>" | "</P>
-<%= link_to "Back", books_path() %>
+ | <%= link_to "Back", books_path() %>
