--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <h1>Books</h1>
   <table>
     <thead>
@@ -14,15 +18,23 @@
         <td><%= book.body %></td>
         <td><%= link_to "Show", book_path(book.id) %></td>
         <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-        <td><%= link_to "Destroy", books_path() %></td>
+        <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
       </tr>
     </tbody>
   <% end %>
   </table>
 
 <h2>New book</h2>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book, url: books_path, method: :post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 
