--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,5 +12,4 @@
 <% end %>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
-<P>" | "</P>
-<%= link_to "Back", books_path() %>
+| <%= link_to "Back", books_path() %>
