--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,11 @@
-<div>
+<div class="notice">
   <%= flash[:notice] %>
 </div>
 
 <h1>Books</h1>
   <table>
     <thead>
-      <tr>
+      <tr class="">
         <th>Title</th>
         <th>Body</th>
         <th colspan="3"></th>
@@ -25,6 +25,7 @@
   </table>
 
 <h2>New book</h2>
+<div>
 <% if @book.errors.any? %>
   <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
@@ -33,14 +34,21 @@
     <% end %>
   </ul>
 <% end %>
+</div>
 
 <%= form_with model: @book, url: books_path, method: :post do |f| %>
+<div class="field">
   <h4>Title</h4>
   <%= f.text_field :title %>
+</div>
 
+<div class="field">
   <h4>Body</h4>
   <%= f.text_area :body %>
+</div>
 
+<div class="actions">
   <%= f.submit 'Create Book' %>
+</div>
 
 <% end %>
