--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,23 +1,27 @@
 <% if @book.errors.any? %>
+<div id="error_explanation">
+  <h2>
   <%= @book.errors.count %>errors prohibited this book from being saved:
+  </h2>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
+</div>
 
 <h1>Editing Book</h1>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
 <div class="field">
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <label class="book_title">Title</label>
+  <%= f.text_field :title, class: "book_title" %>
 </div>
 
 <div class="field">
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+  <label class="book_body">Body</label>
+  <%= f.text_area :body, class: "book_body" %>
 </div>
 
 <div class="actions">
@@ -26,5 +30,5 @@
 
 <% end %>
 
-<%= link_to "Show", book_path(@book.id) %>
- | <%= link_to "Back", books_path() %>
+<%= link_to "Show", book_path(@book.id), class: "show_#{@book.id}" %>
+ | <%= link_to "Back", books_path(), class: "back" %>
