--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,18 +16,23 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to "Show", book_path(book.id) %></td>
-        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-        <td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, data: {confirm: "Are you sure?"} %></td>
+        <td><%= link_to "Show", book_path(book.id), class: "show_#{book.id}" %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id), class: "edit_#{book.id}" %></td>
+        <td><%= link_to "Destroy", destroy_book_path(book.id), class: "destroy_#{book.id}", method: :delete, data: {confirm: "Are you sure?"} %></td>
       </tr>
     </tbody>
   <% end %>
   </table>
 
 <h2>New book</h2>
-<div>
+
+<%= form_with model: @book, url: books_path, class: "new_book", method: :post do |f| %>
+
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
+<div id="error_explanation">
+  <h2>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+  </h2>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -36,15 +41,14 @@
 <% end %>
 </div>
 
-<%= form_with model: @book, url: books_path, method: :post do |f| %>
 <div class="field">
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <label for="book_title">Title</label>
+  <%= f.text_field :title, class: "book_title" %>
 </div>
 
 <div class="field">
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+  <label for="book_body">Body</label>
+  <%= f.text_area :body, class: "book_body" %>
 </div>
 
 <div class="actions">
