--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,5 +15,5 @@
 
 <% end %>
 
-<%= link_to "Edit", edit_book_path(@book.id) %>
-| <%= link_to "Back", books_path() %>
+<%= link_to "Edit", edit_book_path(@book.id), class: "edit_#{@book.id}" %>
+| <%= link_to "Back", books_path(), class: "back" %>
